fix: Left-align 'Don't Start a Business Blind' text on desktop

--- a/style.css
+++ b/style.css
@@ -703,7 +703,7 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-end;
+    align-items: flex-start;
     text-align: left;
     padding: 0 30px 20px 0;
 }
